tests/negative/typecheck/union-non-sum.orng
fn main() -> Int {
    const A = Int || Float
    0
}